--- a/MammyDictionary/app/build.gradle
+++ b/MammyDictionary/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
 }
